11May00=======================================================================
1. fixed looping in Msg.pm (at last)
10May00=======================================================================
1. wrote a cross between 'tail -f' and grepdbg so that you can watch the
debug files for particular strings and only have them print out. 
05May00=======================================================================
1. rewrote parts of Msg.pm and client.c so that the messages no longer use
a length word at the front of each one. They are simply strings of characters
separated by a \n. No binary characters are allowed (they are encoded as %nn)
a la HTTP. This hopefully cures Arnold's problem and also make it more
secure anyway. It also paves the way for the ax25/ip multicast client.
30Apr00=======================================================================
1. put some extra checks and balances in to message send routine in Msg.pm to
see if I can prevent the error seen by Arnold (which I think is only likely to
appear in heavily loaded sites).
25Apr00=======================================================================
1. Changed reply so that you can reply to more than one address privately
31Mar00=======================================================================
1. fixed nnn-mmm in kill (erase/delete) msgs so that mmm is also deleted and
not just nnn -> mmm-1.
2. Added an autosplit to message importing so that messages are split
automagically into bits if the filename used in the import directory starts
with "split". This will add a [1/5] type string on the the end of the subject. 
3. dedupe more aggressively on the text of Spots so that only the 1st 27 chars
of text are considered (as opposed to the whole lot).
30Mar00=======================================================================
1. altered client.pl connect code so that it doesn't falsely recognise 
/spider/src/client as a 'client' instruction.